--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,3 +24,10 @@ jobs:
     - uses: actions/checkout@v2
       name: Check out code
 
+    - name: Install dependencies
+      run: |
+        sudo apt-get install -y alien fakeroot
+
+    - name: Build .deb file
+      run: |
+        make build-deb
